--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -163,7 +163,7 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.linute.linute.MainContent.Settings.EditProfileInfoActivity"/>
         </activity>
-        <activity android:name=".MainContent.Settings.EditBirthday"
+        <activity android:name=".MainContent.Settings.EditBirthdayActivity"
                   android:parentActivityName=".MainContent.Settings.EditProfileInfoActivity"
                   android:screenOrientation="portrait"
                   android:theme="@style/AppTheme"
