--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -212,7 +212,8 @@
                 android:value="com.linute.linute.MainContent.Settings.SettingActivity"/>
         </activity>
         <activity android:name=".SquareCamera.CameraActivity"
-                  android:screenOrientation="portrait"/>
+                  android:screenOrientation="portrait"
+            android:launchMode="singleTask"/>
     </application>
 
 </manifest>
