--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,6 +11,7 @@ android {
         targetSdkVersion 23
         versionCode 7
         versionName "1.5"
+        multiDexEnabled true
     }
     buildTypes {
         release {
@@ -36,4 +37,5 @@ dependencies {
     compile 'info.hoang8f:android-segmented:1.0.6'
     compile 'com.getbase:floatingactionbutton:1.10.1'
     compile 'com.github.bumptech.glide:glide:3.6.1'
+    compile 'com.facebook.android:facebook-android-sdk:4.9.0'
 }
