--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,8 @@
         android:theme="@style/AppTheme">
 
 
-        <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/facebook_app_id"/>
+        <meta-data android:name="com.facebook.sdk.ApplicationId"
+                   android:value="@string/facebook_app_id"/>
 
         <receiver
             android:name="com.google.android.gms.gcm.GcmReceiver"
@@ -225,9 +226,15 @@
 
         <activity android:name="com.facebook.FacebookActivity"
                   android:configChanges="orientation"
+                  android:screenOrientation="portrait">
+        </activity>
+
+        <activity android:name=".LoginAndSignup.FacebookSignUpActivity"
+                  android:configChanges="orientation"
                   android:parentActivityName=".LoginAndSignup.PreLoginActivity"
                   android:screenOrientation="portrait"
                   android:theme="@style/AppTheme">
+
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.linute.linute.LoginAndSignup.PreLoginActivity"/>
