--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,9 +9,8 @@ android {
         applicationId "com.linute.linute"
         minSdkVersion 17
         targetSdkVersion 23
-        versionCode 7
-        versionName "1.5"
-        multiDexEnabled true
+        versionCode 8
+        versionName "1.6"
     }
     buildTypes {
         release {
@@ -28,7 +27,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:design:23.1.1'
     compile 'com.squareup.okhttp:okhttp:2.5.0'
-    compile 'com.google.android.gms:play-services:8.3.0'
+    compile 'com.google.android.gms:play-services-gcm:8.3.0'
     compile 'com.soundcloud.android:android-crop:1.0.1@aar'
     compile 'com.mikhaellopez:circularimageview:2.0.2'
     compile 'com.android.support:support-v4:23.1.1'
