--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest package="com.linute.linute"
-          xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest
+    package="com.linute.linute"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
     <permission
         android:name="com.linute.linute.permission.C2D_MESSAGE"
@@ -19,6 +20,7 @@
     <uses-permission android:name="android.permission.WAKE_LOCK"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
 
     <application
         android:allowBackup="true"
@@ -26,10 +28,9 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
-
-        <meta-data android:name="com.facebook.sdk.ApplicationId"
-                   android:value="@string/facebook_app_id"/>
+        <meta-data
+            android:name="com.facebook.sdk.ApplicationId"
+            android:value="@string/facebook_app_id"/>
 
         <receiver
             android:name="com.google.android.gms.gcm.GcmReceiver"
@@ -224,23 +225,40 @@
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme">
         </activity>
-
-        <activity android:name="com.facebook.FacebookActivity"
-                  android:configChanges="orientation"
-                  android:screenOrientation="portrait">
+        <activity
+            android:name="com.facebook.FacebookActivity"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait">
         </activity>
-
-        <activity android:name=".LoginAndSignup.FacebookSignUpActivity"
-                  android:configChanges="orientation"
-                  android:parentActivityName=".LoginAndSignup.PreLoginActivity"
-                  android:screenOrientation="portrait"
-                  android:theme="@style/AppTheme">
-
+        <activity
+            android:name=".LoginAndSignup.FacebookSignUpActivity"
+            android:configChanges="orientation"
+            android:parentActivityName=".LoginAndSignup.PreLoginActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.linute.linute.LoginAndSignup.PreLoginActivity"/>
         </activity>
+        <activity
+            android:name=".MainContent.Chat.RoomsActivity"
+            android:label="@string/title_activity_rooms"
+            android:parentActivityName=".MainContent.MainActivity"
+            android:theme="@style/AppTheme">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.linute.linute.MainContent.MainActivity"/>
+        </activity>
 
+        <service
+            android:name=".MainContent.Chat.ChatService"
+            android:label="Chat Service">
+        </service>
+        <receiver android:name=".UtilsAndHelpers.BootReceiver">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED"/>
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
