--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -65,37 +65,31 @@
             android:name=".MainContent.MainActivity"
             android:configChanges="keyboard|keyboardHidden|orientation"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustPan|adjustResize">
-        </activity>
+            android:windowSoftInputMode="adjustPan|adjustResize"/>
+
         <activity
             android:name=".LoginAndSignup.PreLoginActivity"
             android:configChanges="orientation"
             android:label="@string/title_activity_pre_login"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme">
-        </activity>
+            android:theme="@style/AppTheme"/>
+
         <activity
             android:name=".LoginAndSignup.LinuteLoginActivity"
             android:configChanges="orientation"
             android:label="@string/title_activity_linute_login"
             android:parentActivityName=".LoginAndSignup.PreLoginActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.linute.linute.LoginAndSignup.PreLoginActivity"/>
-        </activity>
+            android:theme="@style/AppTheme"/>
+
         <activity
             android:name=".LoginAndSignup.LinuteSignUpActivity"
             android:configChanges="orientation"
             android:label="@string/title_activity_linute_sign_up"
             android:parentActivityName=".LoginAndSignup.PreLoginActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.linute.linute.LoginAndSignup.PreLoginActivity"/>
-        </activity>
+            android:theme="@style/AppTheme"/>
+
         <activity
             android:name=".LaunchActivity"
             android:configChanges="keyboard|keyboardHidden|orientation"
@@ -103,143 +97,106 @@
             android:theme="@style/AppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
-
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+
         <activity android:name="com.soundcloud.android.crop.CropImageActivity"/>
+
         <activity
             android:name=".MainContent.Settings.SettingActivity"
             android:configChanges="orientation"
             android:parentActivityName=".MainContent.MainActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.linute.linute.MainContent.MainActivity"/>
-        </activity>
+            android:theme="@style/AppTheme"/>
         <activity
             android:name=".MainContent.Settings.EditProfileInfoActivity"
             android:parentActivityName=".MainContent.Settings.SettingActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.linute.linute.MainContent.Settings.SettingActivity"/>
-            >
-        </activity>
+            android:theme="@style/AppTheme"/>
         <activity
             android:name=".MainContent.Settings.TermsOfServiceActivity"
             android:parentActivityName=".MainContent.Settings.SettingActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.linute.linute.MainContent.Settings.SettingActivity"/>
-        </activity>
+            android:theme="@style/AppTheme"/>
         <activity
             android:name=".MainContent.Settings.PrivacyPolicyActivity"
             android:parentActivityName=".MainContent.Settings.SettingActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.linute.linute.MainContent.Settings.SettingActivity"/>
-        </activity>
+            android:theme="@style/AppTheme"/>
         <activity
             android:name=".MainContent.Settings.EditNameActivity"
             android:parentActivityName=".MainContent.Settings.EditProfileInfoActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme"
-            android:windowSoftInputMode="adjustResize">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.linute.linute.MainContent.Settings.EditProfileInfoActivity"/>
-        </activity>
+            android:windowSoftInputMode="adjustResize"/>
         <activity
             android:name=".MainContent.Settings.EditStatusActivity"
             android:parentActivityName=".MainContent.Settings.EditProfileInfoActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme"
-            android:windowSoftInputMode="adjustResize">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.linute.linute.MainContent.Settings.EditProfileInfoActivity"/>
-        </activity>
+            android:windowSoftInputMode="adjustResize"/>
         <activity
             android:name=".MainContent.Settings.EditBirthdayActivity"
             android:parentActivityName=".MainContent.Settings.EditProfileInfoActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.linute.linute.MainContent.Settings.EditProfileInfoActivity"/>
-        </activity>
+            android:theme="@style/AppTheme"/>
+
         <activity
             android:name=".MainContent.Settings.EditGenderActivity"
             android:parentActivityName=".MainContent.Settings.EditProfileInfoActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.linute.linute.MainContent.Settings.EditProfileInfoActivity"/>
-        </activity>
+            android:theme="@style/AppTheme"/>
+
         <activity
             android:name=".MainContent.Settings.ChangeEmailActivity"
             android:parentActivityName=".MainContent.Settings.SettingActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme"
-            android:windowSoftInputMode="adjustResize">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.linute.linute.MainContent.Settings.SettingActivity"/>
-        </activity>
+            android:windowSoftInputMode="adjustResize"/>
+
         <activity
             android:name=".MainContent.Settings.ChangeProfileImageActivity"
             android:parentActivityName=".MainContent.Settings.SettingActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.BlackBackground">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.linute.linute.MainContent.Settings.SettingActivity"/>
-        </activity>
+            android:theme="@style/AppTheme.BlackBackground"/>
+
         <activity
             android:name=".MainContent.Settings.ChangePhoneActivity"
             android:parentActivityName=".MainContent.Settings.SettingActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme"
-            android:windowSoftInputMode="adjustResize">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.linute.linute.MainContent.Settings.SettingActivity"/>
-        </activity>
+            android:windowSoftInputMode="adjustResize"/>
+
         <activity
             android:name=".SquareCamera.CameraActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/squarecamera__CameraFullScreenTheme">
-        </activity>
+            android:theme="@style/squarecamera__CameraFullScreenTheme"/>
+
         <activity
             android:name=".LoginAndSignup.CollegePickerActivity"
             android:label="@string/title_activity_college_picker"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme">
-        </activity>
+            android:theme="@style/AppTheme"/>
+
 
         <activity android:name="com.facebook.FacebookActivity"
                   android:configChanges="orientation"
-                  android:screenOrientation="portrait">
-        </activity>
+                  android:screenOrientation="portrait"/>
+
 
         <activity android:name=".LoginAndSignup.FacebookSignUpActivity"
                   android:configChanges="orientation"
                   android:parentActivityName=".LoginAndSignup.PreLoginActivity"
                   android:screenOrientation="portrait"
-                  android:theme="@style/AppTheme">
+                  android:theme="@style/AppTheme"/>
 
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.linute.linute.LoginAndSignup.PreLoginActivity"/>
-        </activity>
+
+        <activity android:name=".MainContent.PostCreatePage"
+                  android:configChanges="orientation"
+                  android:screenOrientation="portrait"
+                  android:theme="@style/AppTheme"/>
+
 
         <activity android:name=".MainContent.FindFriends.FindFriendsActivity"
                   android:configChanges="orientation"
