--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,4 +40,5 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:3.6.1'
     compile 'com.facebook.android:facebook-android-sdk:4.9.0'
     compile 'de.greenrobot:eventbus:3.0.0-beta1'
+    compile 'com.android.support:preference-v7:23.1.1'
 }
