--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -179,10 +179,17 @@
         </receiver>
 
         <activity
-            android:name=".MainContent.FindFriends.FindFriendsFragment"
+            android:name=".MainContent.FindFriends.FindFriendsActivity"
             android:configChanges="orientation"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme"/>
+            android:theme="@style/AppTheme"
+            android:windowSoftInputMode="adjustPan|adjustResize"/>
+
+        <activity android:name=".MainContent.Settings.SettingActivity"
+                  android:configChanges="orientation"
+                  android:screenOrientation="portrait"
+                  android:theme="@style/AppTheme"/>
+
 
     </application>
 
