--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,7 +51,6 @@ dependencies {
     compile 'com.mikhaellopez:circularimageview:2.0.2'
     compile 'com.android.support:support-v4:23.1.1'
     compile 'com.android.support:recyclerview-v7:23.1.1'
-    compile 'info.hoang8f:android-segmented:1.0.6'
     compile 'com.getbase:floatingactionbutton:1.10.1'
     compile 'com.github.bumptech.glide:glide:3.6.1'
     compile 'com.facebook.android:facebook-android-sdk:4.9.0'
@@ -59,4 +58,5 @@ dependencies {
     compile('com.crashlytics.sdk.android:crashlytics:2.5.5@aar') {
         transitive = true;
     }
+    compile 'com.linkedin.android.spyglass:spyglass:1.3.0'
 }
