--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest
-    package="com.linute.linute"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest package="com.linute.linute"
+          xmlns:android="http://schemas.android.com/apk/res/android">
 
     <permission
         android:name="com.linute.linute.permission.C2D_MESSAGE"
@@ -11,14 +10,13 @@
 
     <!-- Request permission to use a device camera -->
     <uses-permission android:name="android.permission.CAMERA"/>
-
     <uses-permission android:name="android.permission.READ_PROFILE"/>
     <uses-permission android:name="android.permission.READ_CONTACTS"/>
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.WAKE_LOCK"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-    <!--<uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>-->
+    <!-- <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/> -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
 
     <application
@@ -66,14 +64,12 @@
             android:configChanges="keyboard|keyboardHidden|orientation"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustResize"/>
-
         <activity
             android:name=".LoginAndSignup.PreLoginActivity"
             android:configChanges="orientation"
             android:label="@string/title_activity_pre_login"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme"/>
-
         <activity
             android:name=".LaunchActivity"
             android:configChanges="keyboard|keyboardHidden|orientation"
@@ -81,63 +77,52 @@
             android:theme="@style/AppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
+
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-
         <activity android:name="com.soundcloud.android.crop.CropImageActivity"/>
-
         <activity
             android:name=".MainContent.Settings.EditProfileInfoActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme"
             android:windowSoftInputMode="adjustResize"/>
-
         <activity
             android:name=".MainContent.Settings.TermsOfServiceActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme"/>
-
         <activity
             android:name=".MainContent.Settings.PrivacyPolicyActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme"/>
-
         <activity
             android:name=".MainContent.Settings.ChangeEmailActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme"
             android:windowSoftInputMode="adjustResize"/>
-
         <activity
             android:name=".MainContent.Settings.ChangePhoneActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme"
             android:windowSoftInputMode="adjustResize"/>
-
         <activity
             android:name=".SquareCamera.CameraActivity"
             android:screenOrientation="portrait"
             android:theme="@style/squarecamera__CameraFullScreenTheme"/>
-
         <activity
             android:name=".LoginAndSignup.CollegePickerActivity"
             android:label="@string/title_activity_college_picker"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme"/>
-
-
-        <activity android:name="com.facebook.FacebookActivity"
-                  android:configChanges="orientation"
-                  android:screenOrientation="portrait"/>
-
-
-
-        <activity android:name=".MainContent.PostCreatePage"
-                  android:configChanges="orientation"
-                  android:screenOrientation="portrait"
-                  android:theme="@style/AppTheme"/>
-
+        <activity
+            android:name="com.facebook.FacebookActivity"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".MainContent.PostCreatePage"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme"/>
         <activity
             android:name=".MainContent.Chat.RoomsActivity"
             android:label="@string/title_activity_rooms"
@@ -149,11 +134,11 @@
             android:label="Chat Service">
         </service>
 
-        <!--<receiver android:name=".UtilsAndHelpers.BootReceiver">-->
-            <!--<intent-filter>-->
-                <!--<action android:name="android.intent.action.BOOT_COMPLETED"/>-->
-            <!--</intent-filter>-->
-        <!--</receiver>-->
+        <!-- <receiver android:name=".UtilsAndHelpers.BootReceiver"> -->
+        <!-- <intent-filter> -->
+        <!-- <action android:name="android.intent.action.BOOT_COMPLETED"/> -->
+        <!-- </intent-filter> -->
+        <!-- </receiver> -->
 
         <activity
             android:name=".MainContent.FindFriends.FindFriendsActivity"
@@ -161,16 +146,18 @@
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme"
             android:windowSoftInputMode="adjustResize"/>
-
-        <activity android:name=".MainContent.Settings.SettingActivity"
-                  android:configChanges="orientation"
-                  android:screenOrientation="portrait"
-                  android:theme="@style/AppTheme"/>
-
+        <activity
+            android:name=".MainContent.Settings.SettingActivity"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme"/>
 
         <meta-data
             android:name="io.fabric.ApiKey"
-            android:value="90e83e6f6353d1c449a0b3e3e30dff28fe01a3ae" />
+            android:value="90e83e6f6353d1c449a0b3e3e30dff28fe01a3ae"/>
+
+        <activity android:name=".MainContent.Settings.AttributionsActivity">
+        </activity>
     </application>
 
 </manifest>
