--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,19 +40,19 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
-    compile('io.socket:socket.io-client:0.6.3') {
+    compile('io.socket:socket.io-client:0.7.0') {
         exclude group: 'org.json', module: 'json'
     }
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:design:23.1.1'
-    compile 'com.squareup.okhttp:okhttp:2.5.0'
+    compile 'com.squareup.okhttp3:okhttp:3.1.2'
     compile 'com.google.android.gms:play-services-gcm:8.3.0'
     compile 'com.soundcloud.android:android-crop:1.0.1@aar'
     compile 'com.mikhaellopez:circularimageview:2.0.2'
     compile 'com.android.support:support-v4:23.1.1'
     compile 'com.android.support:recyclerview-v7:23.1.1'
     compile 'com.getbase:floatingactionbutton:1.10.1'
-    compile 'com.github.bumptech.glide:glide:3.6.1'
+    compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.facebook.android:facebook-android-sdk:4.9.0'
     compile 'de.greenrobot:eventbus:3.0.0-beta1'
     compile('com.crashlytics.sdk.android:crashlytics:2.5.5@aar') {
