--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,4 +60,5 @@ dependencies {
     }
     compile 'com.linkedin.android.spyglass:spyglass:1.3.0'
     compile 'de.hdodenhof:circleimageview:2.0.0'
+    compile "com.daimajia.swipelayout:library:1.2.0@aar"
 }
