--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,6 +61,6 @@ dependencies {
     compile 'com.linkedin.android.spyglass:spyglass:1.3.0'
     compile 'de.hdodenhof:circleimageview:2.0.0'
     compile "com.daimajia.swipelayout:library:1.2.0@aar"
-    compile 'com.github.danylovolokh:video-player-manager:0.2.0'
-    compile 'com.github.danylovolokh:list-visibility-utils:0.2.0'
+    compile 'com.github.hiteshsondhi88.libffmpeg:FFmpegAndroid:0.2.5'
+    compile 'commons-io:commons-io:2.4'
 }
