--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,8 +24,8 @@ android {
         applicationId "com.linute.linute"
         minSdkVersion 17
         targetSdkVersion 23
-        versionCode 1
-        versionName "0.1"
+        versionCode 25
+        versionName "1.7.4.5"
     }
     buildTypes {
         release {
@@ -53,7 +53,7 @@ dependencies {
     compile 'com.getbase:floatingactionbutton:1.10.1'
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.facebook.android:facebook-android-sdk:4.9.0'
-    compile 'de.greenrobot:eventbus:3.0.0-beta1'
+    compile 'org.greenrobot:eventbus:3.0.0'
     compile 'com.makeramen:roundedimageview:2.2.1'
     compile('com.crashlytics.sdk.android:crashlytics:2.5.5@aar') {
         transitive = true;
