--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,8 +14,6 @@ repositories {
     maven { url 'https://maven.fabric.io/public' }
 }
 
-apply plugin: 'com.google.gms.google-services'
-
 android {
     compileSdkVersion 23
     buildToolsVersion "23.0.2"
@@ -24,8 +22,8 @@ android {
         applicationId "com.linute.linute"
         minSdkVersion 17
         targetSdkVersion 23
-        versionCode 1
-        versionName "0.1"
+        versionCode 27
+        versionName "1.7.4.6.1"
     }
     buildTypes {
         release {
@@ -53,7 +51,7 @@ dependencies {
     compile 'com.getbase:floatingactionbutton:1.10.1'
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.facebook.android:facebook-android-sdk:4.9.0'
-    compile 'de.greenrobot:eventbus:3.0.0-beta1'
+    compile 'org.greenrobot:eventbus:3.0.0'
     compile 'com.makeramen:roundedimageview:2.2.1'
     compile('com.crashlytics.sdk.android:crashlytics:2.5.5@aar') {
         transitive = true;
@@ -68,3 +66,5 @@ dependencies {
     compile 'io.reactivex:rxandroid:1.1.0'
     compile 'io.reactivex:rxjava:1.1.0'
 }
+
+apply plugin: 'com.google.gms.google-services'
