--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,6 +64,7 @@ dependencies {
 
     //new
     compile 'jp.wasabeef:glide-transformations:2.0.1'
+    compile group: 'org.mongodb', name: 'bson', version: '3.2.2'
 }
 
 apply plugin: 'com.google.gms.google-services'
