--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,8 +22,8 @@ android {
         applicationId "com.linute.linute"
         minSdkVersion 17
         targetSdkVersion 23
-        versionCode 30
-        versionName "1.7.5.2"
+        versionCode 1
+        versionName "0.1"
     }
     buildTypes {
         release {
@@ -61,6 +61,12 @@ dependencies {
     compile 'com.lyft:scissors:1.0.3'
     compile 'io.reactivex:rxandroid:1.1.0'
     compile 'io.reactivex:rxjava:1.1.0'
+
+    //new
+    compile 'net.gotev:uploadservice:2.1'
+    compile 'net.gotev:uploadservice-okhttp:2.1'
+
+    compile group: 'org.mongodb', name: 'mongo-java-driver', version: '3.2.2'
 
 }
 
