--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,8 +23,9 @@ android {
         applicationId "com.linute.linute"
         minSdkVersion 17
         targetSdkVersion 23
-        versionCode 1
-        versionName "0.1"
+        versionCode 32
+        versionName "1.7.5.4"
+        multiDexEnabled true
     }
     buildTypes {
         release {
