--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,6 +63,7 @@ dependencies {
     compile 'com.lyft:scissors:1.0.3'
     compile 'io.reactivex:rxandroid:1.1.0'
     compile 'io.reactivex:rxjava:1.1.0'
+    compile 'com.getbase:floatingactionbutton:1.10.1'
 
     //new
     compile group: 'org.mongodb', name: 'mongo-java-driver', version: '3.2.2'
