fixed share to messenger

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -194,6 +194,7 @@
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustResize"
             />
+        <activity android:name=".MainContent.SendTo.SendToActivity" />
 
         <service
             android:name=".MainContent.Uploading.UploadIntentService"
