added deep link to articles

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -202,7 +202,23 @@
 
         <service
             android:name=".MainContent.DiscoverFragment.ShareService"
-            android:exported="false"></service>
+            android:exported="false" />
+
+        <activity android:name=".MainContent.Global.Articles.ArticleActivity"
+            android:screenOrientation="portrait">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <data
+                    android:scheme="linute"
+                    android:host="article"
+                    android:pathPrefix="/view/"
+                    />
+
+            </intent-filter>
+
+        </activity>
     </application>
 
 </manifest>
